syntax = "proto3";

package product;

option go_package = "github.com/khoihuynh300/go-microservice/shared/proto/product;productpb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";

service ProductService {
    // Product
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse) {
        option (google.api.http) = {
            post: "/v1/products"
            body: "*"
        };
    }

    rpc GetProductByID (GetProductByIDRequest) returns (ProductResponse) {
        option (google.api.http) = {
            get: "/v1/products/{product_id}"
        };
    }

    rpc GetProductBySlug (GetProductBySlugRequest) returns (ProductResponse) {
        option (google.api.http) = {
            get: "/v1/products/slug/{slug}"
        };
    }

    rpc GetProductBySKU (GetProductBySKURequest) returns (ProductResponse) {
        option (google.api.http) = {
            get: "/v1/products/sku/{sku}"
        };
    }

    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse) {
        option (google.api.http) = {
            get: "/v1/products"
        };
    }
    
    rpc SearchProducts(SearchProductsRequest) returns (ListProductsResponse) {
        option (google.api.http) = {
            get: "/v1/products/search"
        };
    }

    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse) {
        option (google.api.http) = {
            patch: "/v1/products/{product_id}"
            body: "*"
        };
    }

    rpc DeleteProduct (DeleteProductRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/products/{product_id}"
        };
    }

    rpc GetProductsByIDs (GetProductsByIDsRequest) returns (ListProductsResponse);

    // Category
    rpc CreateCategory (CreateCategoryRequest) returns (CategoryResponse) {
        option (google.api.http) = {
            post: "/v1/categories"
            body: "*"
        };
    }

    rpc GetCategoryByID (GetCategoryByIDRequest) returns (CategoryResponse) {
        option (google.api.http) = {
            get: "/v1/categories/{category_id}"
        };
    }

    rpc GetCategoryBySlug (GetCategoryBySlugRequest) returns (CategoryResponse) {
        option (google.api.http) = {
            get: "/v1/categories/slug/{slug}"
        };
    }

    rpc ListCategories (ListCategoriesRequest) returns (ListCategoriesResponse) {
        option (google.api.http) = {
            get: "/v1/categories"
        };
    }

    rpc ListRootCategories (google.protobuf.Empty) returns (ListCategoriesResponse) {
        option (google.api.http) = {
            get: "/v1/categories/root"
        };
    }

    rpc ListChildCategories (ListChildCategoriesRequest) returns (ListCategoriesResponse) {
        option (google.api.http) = {
            get: "/v1/categories/{parent_id}/children"
        };
    }

    rpc UpdateCategory (UpdateCategoryRequest) returns (CategoryResponse) {
        option (google.api.http) = {
            patch: "/v1/categories/{category_id}"
            body: "*"
        };
    }

    rpc DeleteCategory (DeleteCategoryRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/categories/{category_id}"
        };
    }

}

// Product Messages

message CreateProductRequest {
    string name = 1 [(buf.validate.field).string.min_len = 1];
    string sku = 2 [(buf.validate.field).string.min_len = 1];
    string slug = 3 [(buf.validate.field).string.min_len = 1];
    string description = 4;
    string category_id = 5 [(buf.validate.field).string.uuid = true];
    double price = 6 [(buf.validate.field).double.gt = 0];
}

message GetProductByIDRequest {
    string product_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetProductBySlugRequest {
    string slug = 1 [(buf.validate.field).string.min_len = 1];
}

message GetProductBySKURequest {
    string sku = 1 [(buf.validate.field).string.min_len = 1];
}

message ListProductsRequest {
    google.protobuf.StringValue category_id = 1;
    int32 page = 3 [(buf.validate.field).int32.gte = 1];
    int32 page_size = 4 [
        (buf.validate.field).int32 = {
            gte: 1,
            lte: 100
        }
    ];
}

message SearchProductsRequest {
    string search = 1;
    int32 page = 2 [(buf.validate.field).int32.gte = 1];
    int32 page_size = 3 [
        (buf.validate.field).int32 = {
            gte: 1,
            lte: 100
        }
    ];
}

message UpdateProductRequest {
    string product_id = 1 [(buf.validate.field).string.uuid = true];
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue sku = 3;
    google.protobuf.StringValue slug = 4;
    google.protobuf.StringValue description = 5;
    google.protobuf.StringValue category_id = 6 [(buf.validate.field).string.uuid = true];
    google.protobuf.DoubleValue price = 7 [(buf.validate.field).double.gte = 0];
    google.protobuf.StringValue thumbnail = 8 [(buf.validate.field).string.uri = true];
    ProductImageSet images = 9;
}

message ProductImageSet {
    repeated string images = 1 [(buf.validate.field).repeated = {
        unique: true,
        items: {
            string: {
                uri: true
            }
        }
    }];
}

message DeleteProductRequest {
    string product_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetProductsByIDsRequest {
    repeated string ids = 1 [
        (buf.validate.field).repeated = {
            min_items: 1,
            unique: true
        }
    ];
}

message ProductSummary {
  string id = 1;
  string sku = 2;
  string name = 3;
  string slug = 4;
  string category_id = 5;
  double price = 6;
  google.protobuf.StringValue thumbnail = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Product {
    string id = 1;
    string name = 2;
    string sku = 3;
    string slug = 4;
    string description = 5;
    string category_id = 6;
    double price = 7;
    google.protobuf.StringValue thumbnail = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    repeated string images = 11;
}

message ProductResponse {
    Product product = 1;
}

message ListProductsResponse {
    repeated ProductSummary products = 1;
    int64 total = 2;
    int32 page = 3;
    int32 page_size = 4;
    int32 total_pages = 5;
}

// Category Messages

message CreateCategoryRequest {
    google.protobuf.StringValue parent_id = 1 [(buf.validate.field).string.uuid = true];
    string name = 2 [(buf.validate.field).string.min_len = 1];
    string slug = 3 [(buf.validate.field).string.min_len = 1];
    string description = 4;
}

message GetCategoryByIDRequest {
    string category_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCategoryBySlugRequest {
    string slug = 1 [(buf.validate.field).string.min_len = 1];
}

message ListCategoriesRequest {
    google.protobuf.StringValue parent_id = 1 [(buf.validate.field).string.uuid = true];
}

message ListChildCategoriesRequest {
    string parent_id = 1 [(buf.validate.field).string.uuid = true];
}

message UpdateCategoryRequest {
    string category_id = 1 [(buf.validate.field).string.uuid = true];
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue slug = 3;
    google.protobuf.StringValue description = 4;
    google.protobuf.StringValue parent_id = 5 [(buf.validate.field).string.uuid = true];
    google.protobuf.StringValue image_url = 6 [(buf.validate.field).string.uri = true];
}

message DeleteCategoryRequest {
    string category_id = 1 [(buf.validate.field).string.uuid = true];
}

message Category {
    string id = 1;
    string name = 2;
    google.protobuf.StringValue parent_id = 3;
    string slug = 4;
    string description = 5;
    google.protobuf.StringValue image_url = 6;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message CategoryResponse {
    Category category = 1;
}

message ListCategoriesResponse {
    repeated Category categories = 1;
    int64 total = 2;
}
